Hero section Design

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <body>
     <header>
+        <!-- start nav section   -->
         <nav class="bg-[#15803D]">
             <div class="navbar w-11/12 mx-auto">
                 <div class="navbar-start">
@@ -41,8 +42,7 @@
                                     d="M4 6h16M4 12h8m-8 6h16" />
                             </svg>
                         </div>
-                        <ul id="" tabindex="0"
-                            class="menu menu-sm dropdown-content rounded-box z-1 mt-3 w-52 p-2  ">
+                        <ul id="" tabindex="0" class="menu menu-sm dropdown-content rounded-box z-1 mt-3 w-52 p-2  ">
                             <li><a>Item 1</a></li>
                             <li>
                                 <a>Parent</a>
@@ -74,14 +74,46 @@
                     </ul>
                 </div>
                 <div class="navbar-end">
-                    <a class="btn bg-[#FACC15] border-none py-[20px] px-[20px] rounded-[50px] shadow-none text-[#15803D]">Plant Tree</a>
+                    <a
+                        class=" btn bg-[#FACC15] border-none py-[7px] px-[20px] rounded-[50px] shadow-none text-[#15803D]">Plant
+                        Tree</a>
                 </div>
             </div>
         </nav>
+
+        <!-- hero section start -->
+
+        <section class="bg-[#CFF0DC]">
+            <div class="flex justify-between">
+                <div><img src="assets/hero-leaf1.png" alt=""></div>
+                <div class="flex flex-col items-center justify-center">
+                    <h1 class="text-[38px] font-bold w-[530px] text-center">Plant a Tree, Grow a Future</h1>
+                    <p class="text-center text-[12px] w-[460px]">Join our mission to plant 1 million trees and make the
+                        Earth greener for future
+                        generations.</p>
+                    <div class="mt-[24px]">
+                        <a
+                            class=" btn bg-[#FACC15] border-none py-[12px] px-[20px] rounded-[50px] shadow-none text-[#15803D]">Get
+                            Involved</a>
+                    </div>
+                </div>
+                <div><img src="assets/hero-leaf2.png" alt=""></div>
+            </div>
+        </section>
+
     </header>
 
-    <main>
 
+    <!-- start main section  -->
+    <main class="bg-[#F0FDF4]">
+        <div class="border-1 border-black w-11/12 mx-auto">
+            <h3>Choose Yours Trees</h3>
+            <div>
+                <h4>Catagory</h4>
+            </div>
+            <div></div>
+            <div></div>
+        </div>
     </main>
 
     <footer>
