Category Deaign with API

--- a/index.html
+++ b/index.html
@@ -106,13 +106,53 @@
 
     <!-- start main section  -->
     <main class="bg-[#F0FDF4]">
-        <div class="border-1 border-black w-11/12 mx-auto">
-            <h3>Choose Yours Trees</h3>
-            <div>
-                <h4>Catagory</h4>
+        <div class="border-1 border-black w-11/12 mx-auto ">
+            <h3 class="mt-[60px] text-[24px] font-bold text-center">Choose Yours Trees</h3>
+            <div class="flex gap-[10px]">
+            <div class="w-[350px]">
+                <h4 class=" font-bold mb-[10px]">Categories</h4>
+                <button class="w-full hover:bg-[#DCFCE7] hover:cursor-pointer text-[14px] text-left px-[5px] py-[3px] rounded-[3px] ">all tree</button>
+                <div id="all-category">
+                    
+                </div>
+
             </div>
-            <div></div>
-            <div></div>
+            <div class="grid grid-cols-3 gap-3 ">
+                <div id="card-tree " class="bg-white p-[5px]">
+                    <img src="assets/about.png" alt="">
+                    <h4 class="font-bold">Mango Tree</h4>
+                    <p class="text-[12px]">A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
+                    <div class="">
+                        <span>fruit Tree</span>
+                        <span>ট500</span>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+                <div id="card-tree">
+                    <img src="assets/about.png" alt="">
+                    <h4>Mango Tree</h4>
+                    <p>A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
+                    <div>
+                        <span>fruit Tree</span>
+                        <span>ট500</span>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+                <div id="card-tree">
+                    <img src="assets/about.png" alt="">
+                    <h4>Mango Tree</h4>
+                    <p>A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
+                    <div>
+                        <span>fruit Tree</span>
+                        <span>ট500</span>
+                    </div>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+            <div class="bg-white w-[350px]">
+                <h4>Your Cart</h4>
+            </div>
+            </div>
         </div>
     </main>
 
