--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 
     <!-- start main section  -->
     <main class="bg-[#F0FDF4]">
-        <div class="border-1 border-black w-11/12 mx-auto ">
+        <div class="border-1 border-black w-11/12 mx-auto">
             <h3 class="mt-[60px] text-[24px] font-bold text-center">Choose Yours Trees</h3>
-            <div class="flex gap-[10px]">
-            <div class="w-[350px]">
+            <div class="flex gap-[15px] justify-between">
+            <div class=" w-[180px]">
                 <h4 class=" font-bold mb-[10px]">Categories</h4>
                 <button class="w-full hover:bg-[#DCFCE7] hover:cursor-pointer text-[14px] text-left px-[5px] py-[3px] rounded-[3px] ">all tree</button>
                 <div id="all-category">
@@ -117,16 +117,16 @@
                 </div>
 
             </div>
-            <div class="grid grid-cols-3 gap-3 ">
-                <div id="card-tree " class="bg-white p-[5px]">
+            <div id="tree-container" class="grid grid-cols-3 gap-4 ">
+                <div id="card-tree " class="bg-white p-[10px] rounded-sm w-[250px] space-y-2">
                     <img src="assets/about.png" alt="">
-                    <h4 class="font-bold">Mango Tree</h4>
+                    <h4 class="font-bold mt-[5px]">Mango Tree</h4>
                     <p class="text-[12px]">A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
-                    <div class="">
-                        <span>fruit Tree</span>
-                        <span>ট500</span>
+                    <div class="flex justify-between mt-[10px]">
+                        <span class="text-[14px] bg-[#DCFCE7] px-[10px] py-[2px] rounded-xl">fruit Tree</span>
+                        <span class="text-[14px] font-semibold">ট500</span>
                     </div>
-                    <button>Add to Cart</button>
+                    <button class="w-full mt-[10px] bg-[#15803D] text-white text-[14px] h-[30px] rounded-2xl">Add to Cart</button>
                 </div>
                 <div id="card-tree">
                     <img src="assets/about.png" alt="">
@@ -149,7 +149,7 @@
                     <button>Add to Cart</button>
                 </div>
             </div>
-            <div class="bg-white w-[350px]">
+            <div class="bg-white w-[180px] ">
                 <h4>Your Cart</h4>
             </div>
             </div>
