Categories plant design with api

--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
             <div class="flex gap-[15px] justify-between">
             <div class=" w-[180px]">
                 <h4 class=" font-bold mb-[10px]">Categories</h4>
-                <button class="w-full hover:bg-[#DCFCE7] hover:cursor-pointer text-[14px] text-left px-[5px] py-[3px] rounded-[3px] ">all tree</button>
+                <button onclick="loadAllTreeContainer()" class="w-full hover:bg-[#DCFCE7] hover:cursor-pointer text-[14px] text-left px-[5px] py-[3px] rounded-[3px] ">all tree</button>
                 <div id="all-category">
                     
                 </div>
 
             </div>
             <div id="tree-container" class="grid grid-cols-3 gap-4 ">
-                <div id="card-tree " class="bg-white p-[10px] rounded-sm w-[250px] space-y-2">
+                <!-- <div id="card-tree " class="bg-white p-[10px] rounded-sm w-[250px] space-y-2">
                     <img src="assets/about.png" alt="">
                     <h4 class="font-bold mt-[5px]">Mango Tree</h4>
                     <p class="text-[12px]">A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
@@ -127,8 +127,8 @@
                         <span class="text-[14px] font-semibold">ট500</span>
                     </div>
                     <button class="w-full mt-[10px] bg-[#15803D] text-white text-[14px] h-[30px] rounded-2xl">Add to Cart</button>
-                </div>
-                <div id="card-tree">
+                </div> -->
+                <!-- <div id="card-tree">
                     <img src="assets/about.png" alt="">
                     <h4>Mango Tree</h4>
                     <p>A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
@@ -137,8 +137,8 @@
                         <span>ট500</span>
                     </div>
                     <button>Add to Cart</button>
-                </div>
-                <div id="card-tree">
+                </div> -->
+                <!-- <div id="card-tree">
                     <img src="assets/about.png" alt="">
                     <h4>Mango Tree</h4>
                     <p>A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
@@ -147,9 +147,9 @@
                         <span>ট500</span>
                     </div>
                     <button>Add to Cart</button>
-                </div>
+                </div> -->
             </div>
-            <div class="bg-white w-[180px] ">
+            <div class="bg-white w-[180px] p-[10px] rounded-sm">
                 <h4>Your Cart</h4>
             </div>
             </div>
