--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
             <div class="navbar w-11/12 mx-auto">
                 <div class="navbar-start">
                     <div class="dropdown">
-                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <div tabindex="0" role="button" class="btn btn-ghost lg:hidden text-white">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M4 6h16M4 12h8m-8 6h16" />
                             </svg>
                         </div>
-                        <ul id="" tabindex="0" class="menu menu-sm dropdown-content rounded-box z-1 mt-3 w-52 p-2  ">
+                        <ul id="" tabindex="0"
+                            class=" bg-green-100 menu menu-sm dropdown-content rounded-box z-1 mt-3 w-30 p-2  ">
                             <li><a>About</a></li>
                             <li>
                                 <a>Gallery</a>
@@ -77,6 +78,16 @@
                     <a
                         class=" bg-[#FACC15] border-none py-[3px] px-[8px] sm:py-[7px] sm:px-[20px] rounded-[50px] shadow-none text-[#15803D] text-[12px] sm:text-[18px]">Plant
                         Tree</a>
+
+                    <!-- Cart icon for mobile responsive  -->
+
+                    <div class="lg:hidden ml-3">
+                        <button onclick="toggleCart()" class="relative text-white text-xl">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                            <span id="cart-count"
+                                class="absolute -top-2 -right-2 bg-yellow-400 text-green-800 text-xs w-5 h-5 flex items-center justify-center rounded-full">0</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -87,7 +98,8 @@
             <div class="flex justify-between">
                 <div class="flex"><img src="assets/hero-leaf1.png" alt=""></div>
                 <div class="flex flex-col items-center justify-center">
-                    <h1 class="text-[18px] mt-[10px] sm:text-[28px] font-bold  text-center">Plant a Tree, Grow a Future</h1>
+                    <h1 class="text-[18px] mt-[10px] sm:text-[28px] font-bold  text-center">Plant a Tree, Grow a Future
+                    </h1>
                     <p class="text-center text-[8px] sm:text-[11px]  text-[#404040]">Join our mission to plant 1 million
                         trees and make the Earth greener for future generations.</p>
                     <div class="sm:mt-[24px] mb-[20px] mt-[15px]">
@@ -104,11 +116,13 @@
 
 
     <!-- start main section  -->
+
     <main class="bg-[#F0FDF4]">
 
         <!-- start tree-container  -->
         <section class="w-11/12 mx-auto">
-            <h3 class="pt-[30px] sm:pt-[60px] mb-[15px] sm:mb-[30px] sm:text-[24px] font-bold text-center">Choose Yours Trees</h3>
+            <h3 class="pt-[30px] sm:pt-[60px] mb-[15px] sm:mb-[30px] sm:text-[24px] font-bold text-center">Choose Yours
+                Trees</h3>
             <div class="flex flex-col sm:flex-row gap-[15px] justify-between">
                 <div class=" sm:w-[180px] mx-auto">
                     <h4 class=" font-bold mb-[10px] text-[14px] sm:text-[18px] text-center sm:text-left">Categories</h4>
@@ -154,26 +168,53 @@
                     <button>Add to Cart</button>
                 </div> -->
                 </div>
-                <div id="cart" class="bg-white w-[180px] p-[10px] rounded-sm mx-auto">
+                <div id="cart" class="bg-white w-[180px] p-[10px] rounded-sm mx-auto hidden sm:block">
                     <div>
                         <h4 class="font-bold">Your Cart</h4>
                     </div>
                     <div id="add-card-item">
                         <div id="card-item">
+                            <!-- <div class="flex justify-between items-center bg-green-50 p-2 rounded mb-2">
+                                <div>
+                                    <p class="font-semibold text-[14px]">${item.name}</p>
+                                    <p class="text-[12px] text-gray-600">৳${item.price} x ${item.quantity}</p>
+                                </div>
+                                <button class="text-red-500 hover:cursor-pointer "
+                                    onclick="removeFromCart('${item.name}')">x</button>
+                            </div> -->
 
-                            <!-- cart items will be added here -->
+                            <!-- <div class="flex justify-between font-bold border-t border-gray-300 pt-1 mt-2">
+                                <span class="text-[12px]">Total:</span>
+                                <span class="text-[12px]">৳${totalPrice}</span>
+                            </div> -->
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
+        <!-- only for mobile responsive  -->
+
+        <div id="mobile-cart"
+            class="fixed top-0 right-0 w-64 h-full bg-white shadow-lg transform translate-x-full transition-transform duration-300 z-50">
+            <div class="p-4 border-b flex justify-between items-center">
+                <h4 class="font-bold">Your Cart</h4>
+                <button onclick="toggleCart()"><i class="fa-solid fa-xmark text-xl"></i></button>
+            </div>
+            <div id="mobile-cart-items" class="p-4">
+
+            </div>
+
+
+            <!-- modal from daisyui -->
+
+        </div>
         <!-- Open the modal using ID.showModal() method -->
         <!-- <button class="btn" onclick="my_modal_5.showModal()">open modal</button> -->
         <dialog id="plants_modal" class="modal modal-bottom sm:modal-middle">
             <div id="design-modal" class="modal-box ">
                 <div id="details-container" class="space-y-3">
-                   
+
                 </div>
 
                 <div class="modal-action">
@@ -185,20 +226,20 @@
             </div>
         </dialog>
 
-        <a onclick="my_modal_5.showModal()" href=""></a>
-
 
         <!-- start campaign section  -->
         <section class=" mb-[60px] w-8/13 mx-auto">
             <h2 class="mt-[60px] mb-[30px] text-center font-bold  sm:text-[24px]">About The Campaign</h2>
             <div class="  sm:flex  mx-auto justify-between  gap-3 ">
 
-                <div class="sm:w-1/2" >
+                <div class="sm:w-1/2">
                     <img src="assets/about.png" alt="">
                 </div>
                 <div class=" mt-3 sm:w-1/2 flex flex-col flex-wrap justify-center">
                     <p class="text-[12px] sm:text-[13px] text-[#404040] ">
-                        Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore forests, create habitats for wildlife, and combat global warming.
+                        Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since
+                        our start, we’ve planted over 500,000 trees worldwide. By joining our campaign, you help restore
+                        forests, create habitats for wildlife, and combat global warming.
                     </p>
                     <ul class="list-disc ml-5 text-[11px] text-[#404040] mt-[10px]">
                         <li>Restoration of natural habitats</li>
@@ -213,15 +254,18 @@
         <section class="bg-[#DCFCE7] py-5 sm:py-[60px]">
             <h2 class="sm:mb-[30px] text-center font-bold sm:text-[24px]">Our Impact </h2>
             <div class="w-11/12 mx-auto mt-[15px] sm:mt-[30px] flex justify-between">
-                <div class="bg-white w-[120px] sm:w-[350px]  text-center h-[80px] sm:h-[120px] flex flex-col justify-center rounded-md">
+                <div
+                    class="bg-white w-[120px] sm:w-[350px]  text-center h-[80px] sm:h-[120px] flex flex-col justify-center rounded-md">
                     <span class="font-semibold text-[20px] text-[#15803D]">500K+</span>
                     <P class="text-[11px] text-[#404040]">Trees Planted</P>
                 </div>
-                <div class="bg-white w-[120px] sm:w-[350px]  text-center sm:h-[120px] flex flex-col justify-center rounded-md ">
+                <div
+                    class="bg-white w-[120px] sm:w-[350px]  text-center sm:h-[120px] flex flex-col justify-center rounded-md ">
                     <span class="font-semibold text-[20px] text-[#15803D]">120+</span>
                     <P class="text-[11px] text-[#404040]">Communities Involved</P>
                 </div>
-                <div class="bg-white w-[120px] sm:w-[350px]  text-center sm:h-[120px] flex flex-col justify-center  rounded-md">
+                <div
+                    class="bg-white w-[120px] sm:w-[350px]  text-center sm:h-[120px] flex flex-col justify-center  rounded-md">
                     <span class="font-semibold text-[20px] text-[#15803D]">30+</span>
                     <P class="text-[11px] text-[#404040]">Countries Reached</P>
                 </div>
@@ -230,15 +274,19 @@
         </section>
     </main>
 
+
+    <!-- Footer section start  -->
     <footer>
         <section class="bg-[#166534] ">
             <div>
                 <div>
-                    <h2 class="text-center mb-[30px] font-bold sm:text-[24px] text-white pt-[30px] sm:pt-[60px] ">Plant a Tree Today
+                    <h2 class="text-center mb-[30px] font-bold sm:text-[24px] text-white pt-[30px] sm:pt-[60px] ">Plant
+                        a Tree Today
                     </h2>
                 </div>
                 <div class="  flex items-center justify-center sm:pb-[30px] mx-auto  ">
-                    <form class="w-[350px] sm:w-[400px] grid space-y-3 bg-[#15803D] shadow-inherit p-5 rounded-md mb-[60px]">
+                    <form
+                        class="w-[350px] sm:w-[400px] grid space-y-3 bg-[#15803D] shadow-inherit p-5 rounded-md mb-[60px]">
                         <input class="rounded-sm h-7 bg-white border-none text-[12px] px-2" type="text" name="name"
                             placeholder="Your name" id="">
                         <input class="rounded-sm h-7 bg-white border-none text-[12px] px-2" type="email" name="email"
@@ -263,6 +311,7 @@
     <i class="fa-solid fa-seedling"></i>
 
     <i class="fa-solid fa-xmark"></i> -->
+
 
     <script src="js/script.js"></script>
 </body>
