Add Readme.md file

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class=" sm:w-[180px] mx-auto">
                     <h4 class=" font-bold mb-[10px] text-[14px] sm:text-[18px] text-center sm:text-left">Categories</h4>
                     <div class="flex flex-wrap justify-center sm:flex-none sm:justify-start">
-                        <button onclick="loadAllTreeContainer()" id="all-trees-btn"
+                        <button onclick="loadAllTreeContainer() " ondblclick="" id="all-trees-btn"
                             class=" sm:w-full hover:bg-[#DCFCE7] hover:cursor-pointer text-[12px] sm:text-[14px] text-left px-[5px] py-[3px] rounded-[3px] active mb-[3px] allCategory-btn ">All
                             Trees</button>
                         <div id="all-category" class="flex flex-wrap justify-center sm:w-full sm:flex-none sm:flex-col">
